# Ontwerpen3

./: CMakeLists.txt  README.md
central_node/: main.c  nrf24L01.h  serialF0.h  uart.elf
central_node_gas/: Makefile  main.c  serialF0.c  serialF0.h  uart.elf
lamp_node/: Makefile  main.c  serialF0.c  uart.elf
lib/: nrf24L01.c  serialF0.c
src/central_node/: main.c
src/central_node_gas/: main.c
src/lamp_node/: main.c
src/window_node/: Makefile  main.c
window_node/: main.c  serialF0.h  uart.elf
